# nerf-attention

./: .gitignore  FINDINGS.md  README.md  pyproject.toml  quickstart.py
nerf_attention/: __init__.py  analyze.py  evaluate.py  experiments.py  extract.py  fit.py  siren.py  types.py
nerf_attention/experiments/: __init__.py  __main__.py  multi_prompt.py  prompts.py  scaling.py  summary.py  svd.py
results/analysis/: analysis_results.json
results/figures/: crossover_data.json  latency_results.json
results/fits/: fit_results.json
results/layer_profile/: full_layer_profile.json
results/multi_prompt/: multi_prompt_results.json
results/multi_prompt/code/analysis/: analysis_results.json
results/multi_prompt/conversational/analysis/: analysis_results.json
results/multi_prompt/fiction/analysis/: analysis_results.json
results/multi_prompt/technical/analysis/: analysis_results.json
results/scaling/: scaling_results.json
results/scaling/seq_1024/analysis/: analysis_results.json
results/scaling/seq_4096/analysis/: analysis_results.json
results/scaling/seq_512/analysis/: analysis_results.json
results/svd/: svd_results.json
